fetch: finish first version

--- a/index.html
+++ b/index.html
@@ -76,59 +76,77 @@
                         <p>Try it free for 1 month</p>
                     </div>
                     <div class="price-container">
-                        <p class="price">0€</p>
+                        <p class="price">0<pan class="cents">,00 €</pan></p>
                     </div>
                     <ul>
-                        <li>* lo que entra</li>
-                        <li>* lo que entra</li>
-                        <li>* lo que entra</li>
-                        <li>* lo que entra</li>
-                        <li>* lo que entra</li>
-                        <li>* lo que entra</li>
-                        <li>* lo que entra</li>
-                        <li>* lo que entra</li>
+                        <li>
+                            <p><span role="img">👍&nbsp; &nbsp;</span>5 listings per week</p>
+                        </li>
+                        <li>
+                            <p><span role="img">👎&nbsp; &nbsp;</span>Seller contact details</p>
+                        </li>
+                        <li>
+                            <p><span role="img">👎&nbsp; &nbsp;</span>Access to listings archive</p>
+                        </li>
+                        <li>
+                            <p><span role="img">👎&nbsp; &nbsp;</span>Articles about moving and living in Spain</p>
+                        </li>
                     </ul>
-                    <button>Subscribe</button>
+                    <div class="plan-button-container">
+                        <button>Subscribe</button>
+                    </div>
                 </article>
                 <article class="plan-container">
                     <div class="period flex-container-column">
-                        <h2>FREE</h2>
-                        <p>Try it free for 1 month</p>
+                        <h2>Monthly</h2>
+                        <p>Pay monthy</p>
                     </div>
                     <div class="price-container">
-                        <p class="price">0€</p>
+                        <p class="price">9<pan class="cents">,99 €</pan></p>
                     </div>
                     <ul>
-                        <li>* lo que entra</li>
-                        <li>* lo que entra</li>
-                        <li>* lo que entra</li>
-                        <li>* lo que entra</li>
-                        <li>* lo que entra</li>
-                        <li>* lo que entra</li>
-                        <li>* lo que entra</li>
-                        <li>* lo que entra</li>
+                        <li>
+                            <p><span role="img">👍&nbsp; &nbsp;</span>5 listings per week</p>
+                        </li>
+                        <li>
+                            <p><span role="img">👍&nbsp; &nbsp;</span>Seller contact details</p>
+                        </li>
+                        <li>
+                            <p><span role="img">👍&nbsp; &nbsp;</span>Access to listings archive</p>
+                        </li>
+                        <li>
+                            <p><span role="img">👍&nbsp; &nbsp;</span>Articles about moving and living in Spain</p>
+                        </li>
                     </ul>
-                    <button>Subscribe</button>
+                    <div class="plan-button-container">
+                        <button>Subscribe</button>
+                    </div>
                 </article>
                 <article class="plan-container">
                     <div class="period flex-container-column">
-                        <h2>FREE</h2>
-                        <p>Try it free for 1 month</p>
+                        <h2>Yearly</h2>
+                        <p>Pay annually and get the best price</p>
                     </div>
                     <div class="price-container">
-                        <p class="price">0€</p>
+                        <p class="price">99<pan class="cents">,99 €</pan></p>
                     </div>
                     <ul>
-                        <li>* lo que entra</li>
-                        <li>* lo que entra</li>
-                        <li>* lo que entra</li>
-                        <li>* lo que entra</li>
-                        <li>* lo que entra</li>
-                        <li>* lo que entra</li>
-                        <li>* lo que entra</li>
-                        <li>* lo que entra</li>
+                        <li>
+                            <p><span role="img">👍&nbsp; &nbsp;</span>5 listings per week</p>
+                        </li>
+                        <li>
+                            <p><span role="img">👍&nbsp; &nbsp;</span>Seller contact details</p>
+                        </li>
+                        <li>
+                            <p><span role="img">👍&nbsp; &nbsp;</span>Access to listings archive</p>
+                        </li>
+                        <li>
+                            <p><span role="img">👍&nbsp; &nbsp;</span>Articles about moving and living in Spain</p>
+                        </li>
                     </ul>
-                    <button>Subscribe</button>
+                    <div class="plan-button-container">
+                        <button>Subscribe</button>
+                    </div>
                 </article>
             </div>
         </section>
