--- a/index.html
+++ b/index.html
@@ -23,7 +23,28 @@
                 </p>
             </div>
         </section>
-        <section class="flex-container-row">
+        <!-- 3 STEPS -->
+        <section id="threeSteps">
+            <div class="cardStep">
+                <h2>10 FRESH LISTINGS EVERY WEEK</h2>
+                <p>
+                    Every week, I scour thousands of listings, and pick only the absolute best deals for paying subscribers. The links to the original listings are in the email.
+                </p>
+            </div>
+            <div class="cardStep">
+                <h2>ONE STEP CLOSER TO YOUR DREAM</h2>
+                <p>
+                    Spain doesn't have to be expensive. I've found tons of amazing properties for less than €100K, even €50K. Your dream home in Spain is waiting.
+                </p>
+            </div>
+            <div class="cardStep">
+                <h2>INFO ON BUYING A HOUSE IN SPAIN</h2>
+                <p>
+                    Buying a house in Spain as a non-resident can be challenging. Get articles that will help you buy your Spain dream house in the weekly newsletter.
+                </p>
+            </div>
+        </section>
+        <!-- <section class="flex-container-row">
             <img class="random-img" alt="spanish house image">
             <div class="flex-container-column sand-bgcolor-1">
                 <h2>ONE STEP CLOSER TO YOUR DREAM</h2>
@@ -49,7 +70,7 @@
                     Buying a house in Spain as a non-resident can be challenging. Get articles that will help you buy your Spain dream house in the weekly newsletter.
                 </p>
             </div>
-        </section>
+        </section> -->
         <!-- FEATURED LISTINGS -->
         <section id="featured-listings" class="flex-container-column">
             <h2>
