--- a/index.html
+++ b/index.html
@@ -341,7 +341,7 @@
         </section>
     </main>
     <footer class="flex-container-row">
-        <p>Made width love from Spain <span role="img">🌴</span></p>
+        <p>Made with love from Spain <span role="img">🌴</span></p>
     </footer>
 </body>
 </html>
