fetch: btn-hero implemented

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <script src="app.js" defer></script>
+    <script src="https://spain-cheap-houses.ck.page/commerce.js" async defer></script>
     <title>Spain Cheap Houses</title>
 </head>
 <body>
@@ -16,12 +17,12 @@
             <h2>
                 A Weekly Curated Selection Of 10 Exclusive House Listings Under €150K
             </h2>
-            <div class="btn-hero">
-                <img src="assets/img/icons/sobre.png" alt="imagen de sobre">
-                <p>
-                    GET THE NEWS LETTER
-                </p>
-            </div>
+                <a class="btn-hero" href="https://spain-cheap-houses.ck.page/products/spain-cheap-houses-yearly-membership" data-commerce>
+                    <img src="assets/img/icons/sobre.png" alt="imagen de sobre">
+                    <p>
+                        GET THE NEWSLETTER
+                    </p>
+                </a>
         </section>
         <!-- 3 STEPS -->
         <section id="threeSteps">
@@ -49,7 +50,7 @@
                 Featured Listings
             </h2>
             <p>
-                .:: Here are some of the properties that are in the newsletter ::.
+                Here are some of the properties that are in the newsletter
             </p>
             <div id="gallery">
                 <!-- <article>
