fetch: scroll efect in css for plans

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <h2>
                 A Weekly Curated Selection Of 10 Exclusive House Listings Under €150K
             </h2>
-                <a class="btn-hero" href="https://spain-cheap-houses.ck.page/products/spain-cheap-houses-yearly-membership" data-commerce>
+                <a class="btn-hero" href="#plans">
                     <img src="assets/img/icons/sobre.png" alt="imagen de sobre">
                     <p>
                         GET THE NEWSLETTER
