--- a/index.html
+++ b/index.html
@@ -116,7 +116,11 @@
                         </li>
                     </ul>
                     <div class="plan-button-container">
-                        <button>Subscribe</button>
+                        <button>
+                            <a class="txt-plan-button" href="https://spain-cheap-houses.ck.page/products/spain-cheap-houses-monthly-membership" data-commerce>
+                                Subscribe
+                            </a>
+                        </button>
                         <!-- <a href="https://spain-cheap-houses.ck.page/products/spain-cheap-houses-monthly-membership" data-commerce>
                             Subscribe
                         </a> -->
@@ -145,7 +149,11 @@
                         </li>
                     </ul>
                     <div class="plan-button-container">
-                        <button>Subscribe</button>
+                        <button>
+                            <a class="txt-plan-button" ref="https://spain-cheap-houses.ck.page/products/spain-cheap-houses-yearly-membership" data-commerce>
+                                Subscribe
+                            </a>
+                        </button>
                         <!-- <a href="https://spain-cheap-houses.ck.page/products/spain-cheap-houses-yearly-membership" data-commerce>
                             Subscribe
                         </a> -->
