--- a/index.html
+++ b/index.html
@@ -90,10 +90,10 @@
                         </li>
                     </ul>
                     <div class="plan-button-container">
-                        <button>Subscribe</button>
-                        <!-- <a href="#" data-commerce>
+                        <!-- <button>Subscribe</button> -->
+                        <a href="#" data-commerce>
                             Subscribe
-                        </a> -->
+                        </a>
                     </div>
                 </article>
                 <article class="plan-container">
@@ -119,14 +119,14 @@
                         </li>
                     </ul>
                     <div class="plan-button-container">
-                        <button>
+                        <!-- <button>
                             <a class="txt-plan-button" href="https://spain-cheap-houses.ck.page/products/spain-cheap-houses-monthly-membership" data-commerce>
                                 Subscribe
                             </a>
-                        </button>
-                        <!-- <a href="https://spain-cheap-houses.ck.page/products/spain-cheap-houses-monthly-membership" data-commerce>
+                        </button> -->
+                        <a href="https://spain-cheap-houses.ck.page/products/spain-cheap-houses-monthly-membership" data-commerce>
                             Subscribe
-                        </a> -->
+                        </a>
                     </div>
                 </article>
                 <article class="plan-container">
@@ -152,14 +152,14 @@
                         </li>
                     </ul>
                     <div class="plan-button-container">
-                        <button>
+                        <!-- <button>
                             <a class="txt-plan-button" ref="https://spain-cheap-houses.ck.page/products/spain-cheap-houses-yearly-membership" data-commerce>
                                 Subscribe
                             </a>
-                        </button>
-                        <!-- <a href="https://spain-cheap-houses.ck.page/products/spain-cheap-houses-yearly-membership" data-commerce>
+                        </button> -->
+                        <a href="https://spain-cheap-houses.ck.page/products/spain-cheap-houses-yearly-membership" data-commerce>
                             Subscribe
-                        </a> -->
+                        </a>
                     </div>
                 </article>
             </div>
