--- a/index.html
+++ b/index.html
@@ -90,9 +90,9 @@
                         </li>
                     </ul>
                     <div class="plan-button-container">
-                        <a href="#" data-commerce>
+                        <a href="https://spain-cheap-houses.ck.page/products/free-membership" data-commerce>
                             Subscribe
-                        </a>
+                        </a>                        
                     </div>
                 </article>
                 <article class="plan-container">
