--- a/index.html
+++ b/index.html
@@ -90,9 +90,12 @@
                         </li>
                     </ul>
                     <div class="plan-button-container">
-                        <a href="https://spain-cheap-houses.ck.page/products/free-membership" data-commerce>
+                        <!-- <a href="https://spain-cheap-houses.ck.page/products/free-membership" data-commerce>
                             Subscribe
-                        </a>                        
+                        </a>                         -->
+                        <a href="https://spain-cheap-houses.ck.page/a3789b8bd4" data-commerce>
+                            Subscribe
+                        </a>                         
                     </div>
                 </article>
                 <article class="plan-container">
