--- a/index.html
+++ b/index.html
@@ -88,15 +88,28 @@
                         <li>
                             <p><span role="img">👎&nbsp; &nbsp;</span>Articles about moving and living in Spain</p>
                         </li>
-                    </ul>
+                    </ul>                    
                     <div class="plan-button-container">
-                        <!-- <a href="https://spain-cheap-houses.ck.page/products/free-membership" data-commerce>
+                        <!-- <a href="https://spain-cheap-houses.ck.page/a3789b8bd4" data-commerce>
                             Subscribe
-                        </a>                         -->
-                        <a href="https://spain-cheap-houses.ck.page/a3789b8bd4" data-commerce>
-                            Subscribe
-                        </a>                         
+                        </a>                          -->
+                        <button id="btn-open-modal">Subscribe</button>
                     </div>
+                    <dialog id="modal-free-suscription">
+                        <div class="flex-dialog">
+                            <div id="form-container">
+                                <h2>Spain Cheap Houses Free Membership</h2>
+                                <h3>Enjoy the newsletter free of charge for one month</h3>
+                                <form method="dialog" id="form-subscription-free">
+                                    <label for="name">Name</label>
+                                    <input type="text" id="name" name="name">
+                                    <label for="mail">E-mail</label>
+                                    <input type="email" id="email" name="email">
+                                    <button id="btn-close-modal">Subscribe</button>
+                                </form>
+                            </div>
+                        </div>                                                                        
+                    </dialog>
                 </article>
                 <article class="plan-container">
                     <div class="period flex-container-column">
