--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
                                     <input type="text" id="name" name="name">
                                     <label for="mail">E-mail</label>
                                     <input type="email" id="email" name="email">
-                                    <button id="btn-close-modal">Subscribe</button>
+                                    <button id="btn-close-modal">Join now</button>
                                 </form>
                             </div>
                         </div>                                                                        
